# hx_Agent

./: .gitignore  README.md  hx_agent.json  kb.sqlite  pyproject.toml
data/: 2.0 同步机制.md
docs/version/: v0.12develop.md  v0.12question.md  v0.1quire.md  v0.2require.md
hx_agent/: app_context.py  ask.py  cli.py  config.py  reformat.py
hx_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hx_agent/core/: config.py  logger.py  logging.py
hx_agent/format/templates/: debug.md  note.md  sop.md
hx_agent/index/: meta_store.py
hx_agent/index/sql/: schema.sql
hx_agent/ingest/: chunker_md.py  scanner.py
hx_agent/llm/: __init__.py  client.py
hx_agent/organize/: __init__.py  service.py
hx_agent/rag/: retriever.py
hx_agent/study/: __init__.py  service.py
scripts/: bootstrap_Linux.sh  bootstrap_win.ps1  dev.py  run.sh  shell.ps1  shell.sh
tests/: fts.py  meta_stroetest.py  setting.py
